class Config:
    '''Configurações de propriedades para a montagem do tabuleiro.'''
    properties = {
        1: {
            'name': 'Butantã',
            'purchase_price': 220,
            'rent_amount': 140
        },
        2: {
            'name': 'Vila Yara',
            'purchase_price': 100,
            'rent_amount': 30
        },
        3: {
            'name': 'Perdizes',
            'purchase_price': 290,
            'rent_amount': 210
        },
        4: {
            'name': 'Pinheiros',
            'purchase_price': 270,
            'rent_amount': 180
        },
        5: {
            'name': 'Vila das Belezas',
            'purchase_price': 90,
            'rent_amount': 13
        },
        6: {
            'name': 'Campo Limpo',
            'purchase_price': 112,
            'rent_amount': 23
        },
        7: {
            'name': 'Capão Redondo',
            'purchase_price': 110,
            'rent_amount': 20
        },
        8: {
            'name': 'Cidade Universitária',
            'purchase_price': 150,
            'rent_amount': 140
        },
        9: {
            'name': 'Vila Olímpia',
            'purchase_price': 260,
            'rent_amount': 200
        },
        10: {
            'name': 'Mooca',
            'purchase_price': 171,
            'rent_amount': 60
        },
        11: {
            'name': 'Broklin',
            'purchase_price': 199,
            'rent_amount': 114
        },
        12: {
            'name': 'Santo Amaro',
            'purchase_price': 199,
            'rent_amount': 80
        },
        13: {
            'name': 'Jardins',
            'purchase_price': 300,
            'rent_amount': 260
        },
        14: {
            'name': 'Jardim Ângela',
            'purchase_price': 40,
            'rent_amount': 10
        },
        15: {
            'name': 'Vila Indiana',
            'purchase_price': 210,
            'rent_amount': 100
        },
        16: {
            'name': 'Osasco',
            'purchase_price': 144,
            'rent_amount': 91
        },
        17: {
            'name': 'Jardim Jaqueline',
            'purchase_price': 131,
            'rent_amount': 100
        },
        18: {
            'name': 'Giovanni Gronchi',
            'purchase_price': 87,
            'rent_amount': 39
        },
        19: {
            'name': 'Interlagos',
            'purchase_price': 149,
            'rent_amount': 120
        },
        20: {
            'name': 'Moema',
            'purchase_price': 216,
            'rent_amount': 151
        }
    }

    properties_2 = {
        1: {
            'name': 'Butantã',
            'purchase_price': 110,
            'rent_amount': 70
        },
        2: {
            'name': 'Vila Yara',
            'purchase_price': 50,
            'rent_amount': 15
        },
        3: {
            'name': 'Perdizes',
            'purchase_price': 145,
            'rent_amount': 105
        },
        4: {
            'name': 'Pinheiros',
            'purchase_price': 135,
            'rent_amount': 90
        },
        5: {
            'name': 'Vila das Belezas',
            'purchase_price': 45,
            'rent_amount': 6
        },
        6: {
            'name': 'Campo Limpo',
            'purchase_price': 56,
            'rent_amount': 11
        },
        7: {
            'name': 'Capão Redondo',
            'purchase_price': 55,
            'rent_amount': 10
        },
        8: {
            'name': 'Cidade Universitária',
            'purchase_price': 75,
            'rent_amount': 70
        },
        9: {
            'name': 'Vila Olímpia',
            'purchase_price': 130,
            'rent_amount': 100
        },
        10: {
            'name': 'Mooca',
            'purchase_price': 85,
            'rent_amount': 30
        },
        11: {
            'name': 'Broklin',
            'purchase_price': 99,
            'rent_amount': 57
        },
        12: {
            'name': 'Santo Amaro',
            'purchase_price': 99,
            'rent_amount': 40
        },
        13: {
            'name': 'Jardins',
            'purchase_price': 150,
            'rent_amount': 130
        },
        14: {
            'name': 'Jardim Ângela',
            'purchase_price': 20,
            'rent_amount': 5
        },
        15: {
            'name': 'Vila Indiana',
            'purchase_price': 105,
            'rent_amount': 50
        },
        16: {
            'name': 'Osasco',
            'purchase_price': 77,
            'rent_amount': 45
        },
        17: {
            'name': 'Jardim Jaqueline',
            'purchase_price': 65,
            'rent_amount': 50
        },
        18: {
            'name': 'Giovanni Gronchi',
            'purchase_price': 43,
            'rent_amount': 19
        },
        19: {
            'name': 'Interlagos',
            'purchase_price': 74,
            'rent_amount': 60
        },
        20: {
            'name': 'Moema',
            'purchase_price': 108,
            'rent_amount': 75
        }
    }

    properties_3 = {
        1: {
            'name': 'Butantã',
            'purchase_price': 55,
            'rent_amount': 35
        },
        2: {
            'name': 'Vila Yara',
            'purchase_price': 25,
            'rent_amount': 7
        },
        3: {
            'name': 'Perdizes',
            'purchase_price': 72,
            'rent_amount': 72
        },
        4: {
            'name': 'Pinheiros',
            'purchase_price': 67,
            'rent_amount': 45
        },
        5: {
            'name': 'Vila das Belezas',
            'purchase_price': 22,
            'rent_amount': 3
        },
        6: {
            'name': 'Campo Limpo',
            'purchase_price': 28,
            'rent_amount': 5
        },
        7: {
            'name': 'Capão Redondo',
            'purchase_price': 27,
            'rent_amount': 5
        },
        8: {
            'name': 'Cidade Universitária',
            'purchase_price': 37,
            'rent_amount': 35
        },
        9: {
            'name': 'Vila Olímpia',
            'purchase_price': 65,
            'rent_amount': 50
        },
        10: {
            'name': 'Mooca',
            'purchase_price': 42,
            'rent_amount': 15
        },
        11: {
            'name': 'Broklin',
            'purchase_price': 49,
            'rent_amount': 28
        },
        12: {
            'name': 'Santo Amaro',
            'purchase_price': 49,
            'rent_amount': 20
        },
        13: {
            'name': 'Jardins',
            'purchase_price': 75,
            'rent_amount': 65
        },
        14: {
            'name': 'Jardim Ângela',
            'purchase_price': 10,
            'rent_amount': 2
        },
        15: {
            'name': 'Vila Indiana',
            'purchase_price': 52,
            'rent_amount': 25
        },
        16: {
            'name': 'Osasco',
            'purchase_price': 38,
            'rent_amount': 22
        },
        17: {
            'name': 'Jardim Jaqueline',
            'purchase_price': 32,
            'rent_amount': 25
        },
        18: {
            'name': 'Giovanni Gronchi',
            'purchase_price': 21,
            'rent_amount': 9
        },
        19: {
            'name': 'Interlagos',
            'purchase_price': 37,
            'rent_amount': 30
        },
        20: {
            'name': 'Moema',
            'purchase_price': 54,
            'rent_amount': 37
        }
    },

    properties_4 = {
        1: {
            'name': 'Butantã',
            'purchase_price': 27,
            'rent_amount': 17
        },
        2: {
            'name': 'Vila Yara',
            'purchase_price': 12,
            'rent_amount': 3
        },
        3: {
            'name': 'Perdizes',
            'purchase_price': 36,
            'rent_amount': 36
        },
        4: {
            'name': 'Pinheiros',
            'purchase_price': 33,
            'rent_amount': 22
        },
        5: {
            'name': 'Vila das Belezas',
            'purchase_price': 11,
            'rent_amount': 1
        },
        6: {
            'name': 'Campo Limpo',
            'purchase_price': 14,
            'rent_amount': 2
        },
        7: {
            'name': 'Capão Redondo',
            'purchase_price': 13,
            'rent_amount': 2
        },
        8: {
            'name': 'Cidade Universitária',
            'purchase_price': 18,
            'rent_amount': 17
        },
        9: {
            'name': 'Vila Olímpia',
            'purchase_price': 32,
            'rent_amount': 25
        },
        10: {
            'name': 'Mooca',
            'purchase_price': 21,
            'rent_amount': 7
        },
        11: {
            'name': 'Broklin',
            'purchase_price': 24,
            'rent_amount': 14
        },
        12: {
            'name': 'Santo Amaro',
            'purchase_price': 24,
            'rent_amount': 10
        },
        13: {
            'name': 'Jardins',
            'purchase_price': 37,
            'rent_amount': 32
        },
        14: {
            'name': 'Jardim Ângela',
            'purchase_price': 5,
            'rent_amount': 1
        },
        15: {
            'name': 'Vila Indiana',
            'purchase_price': 26,
            'rent_amount': 12
        },
        16: {
            'name': 'Osasco',
            'purchase_price': 19,
            'rent_amount': 11
        },
        17: {
            'name': 'Jardim Jaqueline',
            'purchase_price': 16,
            'rent_amount': 12
        },
        18: {
            'name': 'Giovanni Gronchi',
            'purchase_price': 10,
            'rent_amount': 4
        },
        19: {
            'name': 'Interlagos',
            'purchase_price': 18,
            'rent_amount': 15
        },
        20: {
            'name': 'Moema',
            'purchase_price': 27,
            'rent_amount': 18
        }
    }

    properties_5 = {
        1: {
            'name': 'Butantã',
            'purchase_price': 5,
            'rent_amount': 2
        },
        2: {
            'name': 'Vila Yara',
            'purchase_price': 5,
            'rent_amount': 2
        },
        3: {
            'name': 'Perdizes',
            'purchase_price': 5,
            'rent_amount': 2
        },
        4: {
            'name': 'Pinheiros',
            'purchase_price': 5,
            'rent_amount': 2
        },
        5: {
            'name': 'Vila das Belezas',
            'purchase_price': 5,
            'rent_amount': 2
        },
        6: {
            'name': 'Campo Limpo',
            'purchase_price': 5,
            'rent_amount': 2
        },
        7: {
            'name': 'Capão Redondo',
            'purchase_price': 5,
            'rent_amount': 2
        },
        8: {
            'name': 'Cidade Universitária',
            'purchase_price': 5,
            'rent_amount': 2
        },
        9: {
            'name': 'Vila Olímpia',
            'purchase_price': 5,
            'rent_amount': 2
        },
        10: {
            'name': 'Mooca',
            'purchase_price': 5,
            'rent_amount': 2
        },
        11: {
            'name': 'Broklin',
            'purchase_price': 5,
            'rent_amount': 2
        },
        12: {
            'name': 'Santo Amaro',
            'purchase_price': 5,
            'rent_amount': 2
        },
        13: {
            'name': 'Jardins',
            'purchase_price': 5,
            'rent_amount': 2
        },
        14: {
            'name': 'Jardim Ângela',
            'purchase_price': 5,
            'rent_amount': 2
        },
        15: {
            'name': 'Vila Indiana',
            'purchase_price': 5,
            'rent_amount': 2
        },
        16: {
            'name': 'Osasco',
            'purchase_price': 5,
            'rent_amount': 2
        },
        17: {
            'name': 'Jardim Jaqueline',
            'purchase_price': 5,
            'rent_amount': 2
        },
        18: {
            'name': 'Giovanni Gronchi',
            'purchase_price': 5,
            'rent_amount': 2
        },
        19: {
            'name': 'Interlagos',
            'purchase_price': 5,
            'rent_amount': 2
        },
        20: {
            'name': 'Moema',
            'purchase_price': 5,
            'rent_amount': 2
        }
    }
